k8s/base/teslamate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:2.2.0
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: import-data
              mountPath: /opt/app/import
          securityContext:
            runAsUser: 10000
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 1536Mi
              cpu: 1000m
      volumes:
        - name: import-data
          persistentVolumeClaim:
            claimName: teslamate-import
