k8s/base/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  selector:
    app: teslamate
  ports:
    - port: 4000
      targetPort: 4000
